--- a/html/courses.html
+++ b/html/courses.html
@@ -158,11 +158,10 @@
                             </div>
                             <div class="scraths">
                                 <div class="courses_wrap_course_info">
-                                    <h4 class="courses_wrap_course_header header_h4">Scrath</h4>
+                                    <h4 class="courses_wrap_course_header header_h4">Construct 3</h4>
                                     <p class="courses_wrap_course_info_text">
-                                        Визуальная среда программирования, которая позволяет детям создавать собственные
-                                        анимированные
-                                        интерактивные игры и проекты.
+                                        Игровой конструктор для создания игр без программирования. Для художников и
+                                        просто начинающих разработчиков это быстрый путь сделать свою игру.
                                     </p>
                                 </div>
                                 <div class="buttons">
@@ -185,10 +184,9 @@
                                 <div class="courses_wrap_course_info">
                                     <h4 class="courses_wrap_course_header header_h4">Scrath</h4>
                                     <p class="courses_wrap_course_info_text">
-                                        Визуальная среда программирования, которая позволяет детям создавать собственные
-                                        анимированные
-                                        интерактивные игры и проекты.
-                                    </p>
+                                        Scratch – это язык программирования, основанный на принципе
+                                        перетаскивания визуальных блоков, чтобы дети могли легко создавать онлайн-игры,
+                                        мультфильмы и многое другое самостоятельно.
                                 </div>
                                 <div class="buttons">
                                     <div class="button1">
@@ -208,11 +206,10 @@
                             </div>
                             <div class="scraths">
                                 <div class="courses_wrap_course_info">
-                                    <h4 class="courses_wrap_course_header header_h4">Scrath</h4>
+                                    <h4 class="courses_wrap_course_header header_h4">JavaScript Start</h4>
                                     <p class="courses_wrap_course_info_text">
-                                        Визуальная среда программирования, которая позволяет детям создавать собственные
-                                        анимированные
-                                        интерактивные игры и проекты.
+                                        Язык программирования, который добавляет интерактивность и динамичность на
+                                        веб-сайт
                                     </p>
                                 </div>
                                 <div class="buttons">
@@ -233,11 +230,10 @@
                             </div>
                             <div class="scraths">
                                 <div class="courses_wrap_course_info">
-                                    <h4 class="courses_wrap_course_header header_h4">Scrath</h4>
+                                    <h4 class="courses_wrap_course_header header_h4">Mit App Inventor</h4>
                                     <p class="courses_wrap_course_info_text">
-                                        Визуальная среда программирования, которая позволяет детям создавать собственные
-                                        анимированные
-                                        интерактивные игры и проекты.
+                                        Визуальная среда программирования, позваоляющая создавать приложения для
+                                        android.
                                     </p>
                                 </div>
                                 <div class="buttons">
@@ -257,11 +253,10 @@
                             </div>
                             <div class="scraths">
                                 <div class="courses_wrap_course_info">
-                                    <h4 class="courses_wrap_course_header header_h4">Scrath</h4>
+                                    <h4 class="courses_wrap_course_header header_h4">Python Start</h4>
                                     <p class="courses_wrap_course_info_text">
-                                        Визуальная среда программирования, которая позволяет детям создавать собственные
-                                        анимированные
-                                        интерактивные игры и проекты.
+                                        Язык программирования, входящий в топ-10 самых востребованных языков
+                                        программирования.
                                     </p>
                                 </div>
                                 <div class="buttons">
@@ -291,26 +286,41 @@
                 </ol>
             </div>
 
+            <div class="footer_box footer_info">
+                <p class="footer_info_text">По вопросам обращайтесь в техническую поддержку.</p>
+                <div class="footer_box_div">
+                    <div class="footer_box_div_content">
+                        <img src="../img/Phone.png" alt="Phone">
+                        <p class="footer_info_text">+79688873621</p>
+                    </div>
+
+                    <div class="footer_box_div_content">
+                        <img src="../img/Mail.png" alt="Mail">
+                        <p class="footer_info_text">codvolok@gmail.com</p>
+                    </div>
+                </div>
+                <div class="footer_info_box">
+                    <a href="https://vk.com/cyberclass_volok" class="footer_info_box_item"><img
+                            src="../img/VK_Compact_Logo (1) 1.png" alt="VK"></a>
+
+                    <a href="#" class="footer_info_box_item"><img src="../img/Logo 1.png" alt="Telegram"></a>
+
+                    <a href="#" class="footer_info_box_item"><img src="../img/instagram 1.png" alt="Instagram"></a>
+                </div>
+            </div>
+
             <div class="footer_box">
-                <h2 class="footer_box_title">Контакты</h2>
+                <h2 class="footer_box_title">Местоположение</h2>
                 <ol class="footer_box_list">
                     <li><a href="https://yandex.ru/maps/?um=constructor%3Ad499c2ffbb5ed73d0561099773c2f551dccfb4a15d0237d275bd69397c24c2f4&source=constructorLink"
                             class="footer_box_list_item footer_navigate"><img src="../img/gps.png" alt="Navigate"></a>
                     </li>
+
+                    <p class="footer_box_text">
+                        Наш адрес: <br>
+                        Школьная улица, 9А, Волоколамск, Московская область
+                    </p>
                 </ol>
-            </div>
-
-            <div class="footer_box footer_info">
-                <p class="footer_info_subtitle">По вопросам обращайтесь в техническую поддержку.</p>
-                <p class="footer_info_text">
-                    Наш адрес: <br>
-                    Школьная улица, 9А, Волоколамск, Московская область
-                </p>
-                <div class="footer_info_box">
-                    <a href="https://vk.com/cyberclass_volok" class="footer_info_box_item"></a>
-
-                    <a href="#" class="footer_info_box_item"></a>
-                </div>
             </div>
         </section>
     </footer>
