Правки. Недоделанная "О нас"

--- a/html/courses.html
+++ b/html/courses.html
@@ -23,7 +23,7 @@
                     <a href="#" class="header_menu_box_link">О нас</a>
                 </div>
 
-                <a href="../html/registration.html" class="header_menu_action">Войти</a>
+                <a href="../html/login.html" class="header_menu_action">Войти</a>
             </div>
         </section>
     </header>
