--- a/html/main_page.html
+++ b/html/main_page.html
@@ -20,10 +20,10 @@
         <div class="header_menu_box">
           <a href="../html/main_page.html" class="header_menu_box_link">Главная</a>
           <a href="../html/courses.html" class="header_menu_box_link">Курсы</a>
-          <a href="#" class="header_menu_box_link">О нас</a>
+          <a href="../html/about.html" class="header_menu_box_link">О нас</a>
         </div>
 
-        <a href="../html/registration.html" class="header_menu_action">Войти</a>
+        <a href="../html/login.html" class="header_menu_action">Войти</a>
       </div>
     </section>
   </header>
