--- a/html/profile.html
+++ b/html/profile.html
@@ -12,6 +12,20 @@
 </head>
 
 <body>
+    <header>
+        <section class="header">
+            <div class="header_menu">
+                <div class="header_menu_box">
+                    <a href="../html/main_page.html" class="header_menu_box_link">Главная</a>
+                    <a href="../html/courses.html" class="header_menu_box_link">Курсы</a>
+                    <a href="../html/about.html" class="header_menu_box_link">О нас</a>
+                </div>
+
+                <a href="../html/login.html" class="header_menu_action">Войти</a>
+            </div>
+        </section>
+    </header>
+
     <main class="main">
         <section class="info">
             <div class="info_menu">
@@ -59,7 +73,7 @@
                                 анимированные
                                 интерактивные игры и проекты.
                             </details>
-                            
+
                             <!-- <p class="info_person_box_content_action_text">Информация о курсе</p>
                             <img src="../img/Chevron_right.png" alt="Chevron" class="info_person_box_content_action_img"> -->
                         </div>
@@ -85,14 +99,6 @@
 
                         <h3 class="course_box_title">Scratch</h3>
                     </div>
-
-                    <div class="course_box">
-                        <div onclick="window.location.href='current_courses.html'" class="course_box_item">
-                            <img src="../img/python.png" alt="Course" class="course__box_image" />
-                        </div>
-
-                        <h3 class="course_box_title">Python Start</h3>
-                    </div>
                 </div>
             </div>
 
@@ -113,6 +119,14 @@
                         </div>
 
                         <h3 class="course_box_title">PHP</h3>
+                    </div>
+
+                    <div class="course_box">
+                        <div onclick="window.location.href='current_courses.html'" class="course_box_item">
+                            <img src="../img/python.png" alt="Course" class="course__box_image" />
+                        </div>
+
+                        <h3 class="course_box_title">Python Start</h3>
                     </div>
                 </div>
             </div>
