--- a/html/courses.html
+++ b/html/courses.html
@@ -20,7 +20,7 @@
                 <div class="header_menu_box">
                     <a href="../html/main_page.html" class="header_menu_box_link">Главная</a>
                     <a href="../html/courses.html" class="header_menu_box_link">Курсы</a>
-                    <a href="#" class="header_menu_box_link">О нас</a>
+                    <a href="../html/about.html" class="header_menu_box_link">О нас</a>
                 </div>
 
                 <a href="../html/login.html" class="header_menu_action">Войти</a>
@@ -290,22 +290,23 @@
                 <p class="footer_info_text">По вопросам обращайтесь в техническую поддержку.</p>
                 <div class="footer_box_div">
                     <div class="footer_box_div_content">
-                        <img src="../img/Phone.png" alt="Phone">
+                        <img src="../img/Phone.svg" alt="Phone">
                         <p class="footer_info_text">+79688873621</p>
                     </div>
 
                     <div class="footer_box_div_content">
-                        <img src="../img/Mail.png" alt="Mail">
+                        <img src="../img/Mail.svg" alt="Mail">
                         <p class="footer_info_text">codvolok@gmail.com</p>
                     </div>
                 </div>
                 <div class="footer_info_box">
                     <a href="https://vk.com/cyberclass_volok" class="footer_info_box_item"><img
-                            src="../img/VK_Compact_Logo (1) 1.png" alt="VK"></a>
+                            src="../img/VK_Compact_Logo (1) 1.svg" alt="VK"></a>
 
-                    <a href="#" class="footer_info_box_item"><img src="../img/Logo 1.png" alt="Telegram"></a>
+                    <a href="#" class="footer_info_box_item"><img src="../img/Logo 1.svg" alt="Telegram"></a>
 
-                    <a href="#" class="footer_info_box_item"><img src="../img/instagram 1.png" alt="Instagram"></a>
+                    <a href="https://instagram.com/it_class_vlk?igshid=YWJhMjlhZTc=" class="footer_info_box_item"><img
+                            src="../img/instagram 1.svg" alt="Instagram"></a>
                 </div>
             </div>
 
