--- a/html/profile.html
+++ b/html/profile.html
@@ -30,27 +30,27 @@
         <section class="info">
             <div class="info_menu">
                 <div class="info_menu_item">
-                    <img src="../img/profile.png" alt="Profile">
+                    <img src="../img/profile.svg" alt="Profile">
                     <a class="info_menu_item_link" href="../html/profile.html">Личный кабинет</a>
                 </div>
 
                 <div class="info_menu_item">
-                    <img src="../img/documenttext.png" alt="Homework">
+                    <img src="../img/documenttext.svg" alt="Homework">
                     <a class="info_menu_item_link" href="#">Домашнее задание</a>
                 </div>
 
                 <div class="info_menu_item">
-                    <img src="../img/Chat Message.png" alt="Chats">
+                    <img src="../img/Chat Message.svg" alt="Chats">
                     <a class="info_menu_item_link" href="#">Чаты</a>
                 </div>
 
                 <div class="info_menu_item">
-                    <img src="../img/box1.png" alt="Choose a course">
+                    <img src="../img/box1.svg" alt="Courses">
                     <a class="info_menu_item_link" href="../html/courses.html">Курсы</a>
                 </div>
 
                 <div class="info_menu_item">
-                    <img src="../img/logoutcurve.png" alt="Logout">
+                    <img src="../img/logoutcurve.svg" alt="Logout">
                     <a class="info_menu_item_link" href="#">Выход</a>
                 </div>
             </div>
@@ -149,22 +149,23 @@
                 <p class="footer_info_text">По вопросам обращайтесь в техническую поддержку.</p>
                 <div class="footer_box_div">
                     <div class="footer_box_div_content">
-                        <img src="../img/Phone.png" alt="Phone">
+                        <img src="../img/Phone.svg" alt="Phone">
                         <p class="footer_info_text">+79688873621</p>
                     </div>
 
                     <div class="footer_box_div_content">
-                        <img src="../img/Mail.png" alt="Mail">
+                        <img src="../img/Mail.svg" alt="Mail">
                         <p class="footer_info_text">codvolok@gmail.com</p>
                     </div>
                 </div>
                 <div class="footer_info_box">
                     <a href="https://vk.com/cyberclass_volok" class="footer_info_box_item"><img
-                            src="../img/VK_Compact_Logo (1) 1.png" alt="VK"></a>
+                            src="../img/VK_Compact_Logo (1) 1.svg" alt="VK"></a>
 
-                    <a href="#" class="footer_info_box_item"><img src="../img/Logo 1.png" alt="Telegram"></a>
+                    <a href="#" class="footer_info_box_item"><img src="../img/Logo 1.svg" alt="Telegram"></a>
 
-                    <a href="#" class="footer_info_box_item"><img src="../img/instagram 1.png" alt="Instagram"></a>
+                    <a href="https://instagram.com/it_class_vlk?igshid=YWJhMjlhZTc=" class="footer_info_box_item"><img
+                            src="../img/instagram 1.svg" alt="Instagram"></a>
                 </div>
             </div>
 
