--- a/html/courses.html
+++ b/html/courses.html
@@ -104,43 +104,43 @@
                     <input id='eight' type='checkbox' />
                     <label for='eight'>
                         <span></span>
-                        <div class="peshki">6</div>
-                        <ins><i class="peshki"> 6</i></ins>
+                        <div class="peshki">6+</div>
+                        <ins><i class="peshki"> 6+</i></ins>
                     </label>
 
                     <input id='nine' type='checkbox' />
                     <label for='nine'>
                         <span></span>
-                        <div class="peshki">7</div>
-                        <ins><i class="peshki">7</i></ins>
+                        <div class="peshki">7+</div>
+                        <ins><i class="peshki">7+</i></ins>
                     </label>
 
                     <input id='ten' type='checkbox' />
                     <label for='ten'>
                         <span></span>
-                        <div class="peshki">9</div>
-                        <ins><i class="peshki">9</i></ins>
+                        <div class="peshki">9+</div>
+                        <ins><i class="peshki">9+</i></ins>
                     </label>
 
                     <input id='eleven' type='checkbox' />
                     <label for='eleven'>
                         <span></span>
-                        <div class="peshki">10</div>
-                        <ins><i class="peshki">10</i></ins>
+                        <div class="peshki">10+</div>
+                        <ins><i class="peshki">10+</i></ins>
                     </label>
 
                     <input id='twelve' type='checkbox' />
                     <label for='twelve'>
                         <span></span>
-                        <div class="peshki">12</div>
-                        <ins><i class="peshki">12</i></ins>
+                        <div class="peshki">12+</div>
+                        <ins><i class="peshki">12+</i></ins>
                     </label>
 
                     <input id='thirteen' type='checkbox' />
                     <label for='thirteen'>
                         <span></span>
-                        <div class="peshki">14</div>
-                        <ins><i class="peshki">14</i></ins>
+                        <div class="peshki">14+</div>
+                        <ins><i class="peshki">14+</i></ins>
                     </label>
 
                 </div>
